# manifest

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SESSION_KEYS_INTEGRATION.md  package.json  stress-test.sh
.github/workflows/: ci-code-review-rust.yml  ci-publish.yml  ci-trade-verification.yml
audits/: updates.md
cli/: Cargo.toml
cli/src/: main.rs
client/idl/: generateIdl.js  manifest.json  manifest.json.bak  wrapper.json
client/okx/src/: mfx.rs
client/rust/src/: lib.rs
client/ts/scripts/: position.ts
client/ts/src/: global.ts  market.ts  wrapperObj.ts
client/ts/src/manifest/: index.ts
client/ts/src/utils/: beet.ts  redBlackTree.ts
client/ts/src/wrapper/: index.ts
debug-ui/: package.json
debug-ui/scripts/: balance-checker.ts  check-extensions.ts
docs/: WALLET_INTEGRATION.md
perp-mm/: Cargo.toml
perp-mm/src/: main.rs
programs/manifest/: Cargo.toml
programs/manifest/src/: lib.rs  logs.rs
programs/manifest/src/certora/: utils.rs
programs/manifest/src/program/: error.rs  instruction.rs
programs/manifest/src/state/: claimed_seat.rs  constants.rs  market.rs  market_helpers.rs  mod.rs  session_token.rs
programs/manifest/src/validation/: loaders.rs  manifest_checker.rs  mod.rs  session_validator.rs  solana_checkers.rs  token_checkers.rs
programs/manifest/tests/cases/: create_market.rs  global.rs  mod.rs  perps.rs  place_order.rs  swap.rs  token22.rs
programs/manifest/tests/program_test/: fixtures.rs
programs/ui-wrapper/src/: lib.rs
programs/ui-wrapper/src/processors/: place_order.rs
programs/ui-wrapper/tests/program_test/: fixtures.rs
programs/wrapper/src/: lib.rs
sdk/: Cargo.toml  README.md
sdk/src/: client.rs  config.rs  ephemeral.rs  error.rs  lib.rs  market.rs  oracle.rs  position.rs
tests/cases/: sessions.rs
(+105 files in other folders)
